Remove initial code, added viewbinding delegate

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate-full:1.5.9'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
