--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,10 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
+    // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.github.kirich1409:viewbindingpropertydelegate-full:1.5.9'
